--- a/src/styles/layouts/HomePage/_Home.scss
+++ b/src/styles/layouts/HomePage/_Home.scss
@@ -4,7 +4,8 @@
     height: 100vh;
     // background-color: black;
     // background-image: url("https://yixiang-liao.github.io/personal_page/img/I-14.png");
-    background-image: url("./img/homepage/IMG_5119.JPG");
+    background-image: url("https://yixiang-liao.github.io/hengchun-sensibility/img/homepage/IMG_5119.JPG");
+    // background-image: url("./img/homepage/IMG_5119.JPG");
     background-size: cover;
     background-position: center center;
     // background-attachment: fixed; /* 關鍵 */
