--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -207,7 +207,7 @@
   position: relative;
   z-index: 0;
   height: 100vh;
-  background-image: url("./img/homepage/IMG_5119.JPG");
+  background-image: url("https://yixiang-liao.github.io/hengchun-sensibility/img/homepage/IMG_5119.JPG");
   background-size: cover;
   background-position: center center;
   display: flex;
