--- a/src/styles/components/_Navbar.scss
+++ b/src/styles/components/_Navbar.scss
@@ -22,7 +22,7 @@
     font-size: 1.5rem;
     display: flex;
     align-items: center;
-    font-weight: bold;
+    // font-weight: bold;
 
     a {
       text-decoration: none;
@@ -103,7 +103,7 @@
 
       &:hover {
         // color: #007bff;
-        letter-spacing: 1px;
+        // letter-spacing: 1px;
         background-color: #d1421c;
         color: white;
       }
