--- a/src/styles/components/_Footer.scss
+++ b/src/styles/components/_Footer.scss
@@ -1,4 +1,58 @@
 .footer {
   background-color: rgb(39, 37, 37);
   padding: 2rem 2rem 0 2rem;
+  .header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+    .logo {
+      width: 300px;
+      height: auto;
+    }
+    .content {
+      margin-top: 0.5rem;
+      color: rgb(206, 206, 206);
+      ul{
+        list-style: none;
+        li{
+          margin-bottom: 0.5rem;
+        }
+      }
+      a {
+        color: inherit; /* 🔥 跟文字一樣的顏色 */
+        text-decoration: none; /* 🔥 移除底線 */
+        font-size: 1.2rem;
+      }
+    }
+  }
+  .bottom {
+    margin-top: 1rem;
+    padding: 1rem 0;
+    border-top: 1px solid #555;
+    p {
+      color: #ccc;
+      text-align: center;
+      font-size: 1rem;
+      line-height: auto !important;
+      margin: 0 !important;
+      letter-spacing: 1px;
+    }
+  }
+}
+// 手機版樣式 - 移到外面
+@media (max-width: 1299px) {
+  .footer {
+    .header {
+      .logo {
+        width: 200px;
+      }
+    }
+    .bottom {
+      p {
+        font-size: 0.8rem;
+      }
+    }
+  }
 }
