--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -239,6 +239,17 @@ html {
   letter-spacing: 0.5rem;
 }
 
+.title2 {
+  margin-top: 2rem;
+}
+.title2 h2 {
+  font-size: 1.8rem;
+  letter-spacing: 1px;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
 .homepage {
   width: 100vw;
 }
@@ -352,10 +363,22 @@ html {
   }
 }
 .inner-pages {
-  margin: 2rem 20rem;
+  margin: 2rem 8rem;
 }
 .inner-pages .block {
   margin: 4rem 0;
+}
+.inner-pages .block .img_group {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 1rem;
+  margin: 2rem 0;
+}
+.inner-pages .block .img_group img {
+  width: 500px;
+  height: auto;
 }
 .inner-pages .content {
   display: flex;
@@ -381,8 +404,8 @@ html {
 }
 .inner-pages .grid-container .card {
   position: relative;
-  width: 300px;
-  height: 350px; /* 你可調整高度 */
+  width: 200px;
+  height: 250px; /* 你可調整高度 */
   overflow: hidden;
   border-radius: 12px; /* 可選：讓圖片更有質感 */
   display: block; /* ⭐讓 <a> 能用 block 寬度 */
@@ -438,6 +461,27 @@ html {
   .inner-pages {
     margin: 2rem 5rem;
   }
+  .inner-pages .img_group img {
+    width: 300px;
+  }
+  .inner-pages .content {
+    flex-wrap: wrap;
+  }
+}
+@media (min-width: 1920px) {
+  /* 給大桌機 + 4K / 2K 螢幕 */
+  .inner-pages {
+    margin: 2rem 20rem;
+  }
+  .inner-pages .card {
+    width: 300px !important;
+    height: 350px !important;
+  }
+}
+/* ⭐ 一般筆電（Mac、Windows 14~15吋） */
+@media (min-width: 1211px) and (max-width: 1600px) {
+  /* 這裡是你現在想調整的一般筆電 */
+  /* 給大桌機 + 4K / 2K 螢幕 */
   .inner-pages .content {
     flex-wrap: wrap;
   }
