--- a/src/styles/components/_Title.scss
+++ b/src/styles/components/_Title.scss
@@ -9,5 +9,16 @@
     border-bottom: 2px solid #d1421c;
     padding: 1rem 2rem;
     letter-spacing: 0.5rem;
+    // font-weight: bold;
+  }
+}
+.title2{
+  margin-top: 2rem;
+  h2{
+    font-size: 1.8rem;
+    letter-spacing: 1px;
+    font-weight: 500;
+    text-align: center;
+    margin-bottom: 1rem;
   }
 }
