--- a/src/styles/layouts/HomePage/_InnerPages.scss
+++ b/src/styles/layouts/HomePage/_InnerPages.scss
@@ -102,7 +102,7 @@
     margin: 2rem 5rem;
     .img_group{
       img{
-        width: 300px;
+        width: 300px !important;
       }
     }
     .content {
