--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -35,6 +35,7 @@ html {
 @import "./components/BackToTopButton";
 @import "./components/Title";
 @import "./components/Header";
+@import "./components/Header2";
 
 
 @import "./pages/HomePage";
