--- a/src/styles/components/_Header.scss
+++ b/src/styles/components/_Header.scss
@@ -52,7 +52,7 @@
     // font-size: 2.5rem;
     margin-top: -20px;
     border: none;
-    text-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
+    // text-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
     z-index: 4;
   }
   h3{
@@ -61,7 +61,7 @@
     margin-top: -20px;
     border: none;
     letter-spacing: 4px;
-    text-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
+    // text-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
     z-index: 4;
   }
 }
